--- a/client/src/pages/landing/App.css
+++ b/client/src/pages/landing/App.css
@@ -28,9 +28,9 @@
     padding: 4em;
 }
 
-.app-middle-container > button {
+.app-middle-container button {
     border-radius: 10px;
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     border: 1px solid black;
     background-color: #a6b5d2;
     padding: 5px 10px;
@@ -38,8 +38,23 @@
     margin-bottom: 1em;
 }
 
-.app-middle-container > button:hover {
+.app-middle-container button:hover {
     transform: translateY(-5px);
     cursor: pointer;
     box-shadow: 10px 10px 80px 0px #5a7ebf;
+}
+
+.app-join-container > input {
+    width: fit-content;
+    border-radius: 10px;
+    font-size: 1.5rem;
+    border: 1px solid black;
+    background-color: #a6b5d2;
+    padding: 5px 10px;
+    transition: 0.3s;
+    margin-bottom: 1em;
+}
+
+.app-join-container {
+    display: flex;
 }
