--- a/client/src/pages/landing/App.css
+++ b/client/src/pages/landing/App.css
@@ -49,7 +49,7 @@
     border-radius: 10px;
     font-size: 1.5rem;
     border: 1px solid black;
-    background-color: #a6b5d2;
+    background-color: #f2f2f2;
     padding: 5px 10px;
     transition: 0.3s;
     margin-bottom: 1em;
@@ -57,4 +57,8 @@
 
 .app-join-container {
     display: flex;
+}
+
+.app-gen-name:hover {
+    cursor: pointer;
 }
