--- a/client/src/components/error/Error.css
+++ b/client/src/components/error/Error.css
@@ -9,10 +9,11 @@
 	padding: 10px;
 	margin: 10px 0;
 	
-    width: 100%;
+    width: fit-content;
     color: red;
 	border: 1px solid darkred;
 	border-radius: 5px;
+	padding-right: 2.25em;
 }
 
 .close-button {
