--- a/client/src/components/message/Message.css
+++ b/client/src/components/message/Message.css
@@ -1,4 +1,9 @@
 .message {
-    width: 100;
-    background-color: gray;
+    width: fit-content;
+    max-width: 50%;
+    background-color: #bcbbbb;
+    color: #121212;
+    border-radius: 10px;
+    padding: 2px 4px;
+    margin: 10px 10px 0 10px;
 }
