--- a/client/src/pages/landing/App.css
+++ b/client/src/pages/landing/App.css
@@ -29,7 +29,7 @@
 }
 
 .app-middle-container button {
-    border-radius: 10px;
+	border-radius: 0 10px 10px 0;
     font-size: 1.5rem;
     border: 1px solid black;
     background-color: #a6b5d2;
@@ -46,7 +46,7 @@
 
 .app-join-container > input {
     width: fit-content;
-    border-radius: 10px;
+	border-radius: 10px 0 0 10px;
     font-size: 1.5rem;
     border: 1px solid black;
     background-color: #f2f2f2;
