--- a/client/src/components/message/Message.css
+++ b/client/src/components/message/Message.css
@@ -1,9 +1,19 @@
-.message {
+.message-content {
     width: fit-content;
     max-width: 50%;
-    background-color: #bcbbbb;
+
+    background-color: #d8d8d8;
     color: #121212;
+
+    overflow-wrap: break-word;
+
     border-radius: 10px;
-    padding: 2px 4px;
+    padding: 3px 6px;
     margin: 10px 10px 0 10px;
+}
+
+.message-sender {
+    font-size: 8pt;
+    margin-left: 10px;
+    color: #f2f2f2;
 }
