--- a/client/src/pages/landing/App.css
+++ b/client/src/pages/landing/App.css
@@ -38,8 +38,8 @@
     margin-bottom: 1em;
 }
 
-.app-middle-container button:hover {
-    transform: translateY(-5px);
+/* enabled button hover */
+.app-middle-container button:hover:not(:disabled) {
     cursor: pointer;
     box-shadow: 10px 10px 80px 0px #5a7ebf;
 }
