--- a/client/src/pages/room/Room.css
+++ b/client/src/pages/room/Room.css
@@ -27,18 +27,18 @@
 	height: 100%;
 
 	background-color: #18141c;
-	padding: 0 4em;
+	padding: 0 1em;
 }
 
 .room-messages-container {
 	display: flex;
 	flex-direction: column;
-	background-color: #a6b5d2;
+	background-color: #18141c;
 	border-radius: 0 0 10px 10px;
 
     overflow: scroll;
-	-ms-overflow-style: none; /* IE and Edge */
-	scrollbar-width: none; /* Firefox */
+	-ms-overflow-style: none; /* make scrollbar invisible on IE and Edge */
+	scrollbar-width: none; /* make scrollbar invisible on Firefox */
 
 	width: 100%;
 	height: 100%;
