--- a/client/src/pages/room/Room.css
+++ b/client/src/pages/room/Room.css
@@ -1,33 +1,42 @@
 .room {
 	display: flex;
-	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	font-size: 12pt;
+
+	height: 100vh
+}
+
+.room-left-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	width: 20%;
+	height: 100%;
 }
 
 .room-label {
-	position: absolute;
-	top: 10px;
-	left: 20px;
+	width: 100%;
+	text-align: left;
+	padding-left: 2em;
 }
 
 .room-middle-container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	gap: 1em;
 
-	width: 55vw;
+	width: 60%;
 	height: 100%;
 
 	background-color: #18141c;
 	padding: 0 1em;
+}
+
+.room-right-container {
+	width: 20%;
 }
 
 .room-messages-container {
