--- a/client/src/components/settings-modal/SettingsModal.css
+++ b/client/src/components/settings-modal/SettingsModal.css
@@ -19,8 +19,8 @@
     align-items: center;
     justify-content: center;
 
-	width: 50%;
-	height: 30%;
+	width: fit-content;
+	min-height: 30%;
     border-radius: 20px;
 	background: #18141c;
     
