--- a/client/src/components/exit-button/ExitButton.css
+++ b/client/src/components/exit-button/ExitButton.css
@@ -1,11 +1,9 @@
-.settings-button {
+.exit-button {
     display: flex;
     align-items: center;
     gap: 0.5em;
 
-	width: fit-content;
-
-	background-color: #3498db;
+	background-color: red;
 	color: #f2f2f2;
 	border: none;
 	border-radius: 5px;
@@ -15,6 +13,6 @@
     transition: 0.3s;
 }
 
-.settings-button:hover {
-	background-color: #2980b9;
+.exit-button:hover {
+	background-color: darkred;
 }
