--- a/client/src/components/message/Message.css
+++ b/client/src/components/message/Message.css
@@ -7,8 +7,9 @@
 
     overflow-wrap: break-word;
 
+    font-size: large;
     border-radius: 10px;
-    padding: 3px 6px;
+    padding: 4px 8px;
     margin: 10px 10px 0 10px;
 }
 
