--- a/client/src/components/settings-modal/SettingsModal.css
+++ b/client/src/components/settings-modal/SettingsModal.css
@@ -10,7 +10,9 @@
 
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.5);
+	background: rgba(0, 0, 0, 0.7);
+
+	font-size: 18pt;
 }
 
 .settings-modal-content {
@@ -20,16 +22,16 @@
     justify-content: center;
 
 	width: fit-content;
-	min-height: 30%;
     border-radius: 20px;
 	background: #18141c;
     
 	padding: 20px;
 }
 
-.settings-modal-papyrus-container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	gap: 1em;
+.settings-modal-font-picker {
+	font-size: 18pt;
+    border-radius: 20px;
+	width: max-content;
+
+	padding: 0 5px;
 }
