--- a/client/src/pages/landing/App.css
+++ b/client/src/pages/landing/App.css
@@ -4,12 +4,23 @@
     align-items: center;
     justify-content: center;
     font-size: 12pt;
+
+    width: 100%;
+    height: 100%;
 }
 
 .app-welcome-title {
     font-size: 3rem;
     font-weight: bold;
     margin-bottom: 0.5em;
+}
+
+.app-help-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    cursor: pointer;
 }
 
 .app-middle-container {
@@ -22,7 +33,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    
+
+    width: 20vw;
     background-color: #18141c;
     border-radius: 20px;
     padding: 4em;
@@ -57,4 +69,8 @@
 
 .app-join-container {
     display: flex;
+}
+
+.app-help-text {
+    font-size: 14pt;
 }
