--- a/client/src/components/settings-modal/SettingsModal.css
+++ b/client/src/components/settings-modal/SettingsModal.css
@@ -20,6 +20,7 @@
 	flex-direction: column;
     align-items: center;
     justify-content: center;
+	gap: 1em;
 
 	width: fit-content;
     border-radius: 20px;
@@ -28,7 +29,7 @@
 	padding: 20px;
 }
 
-.settings-modal-font-picker {
+.settings-modal-font-picker, .settings-modal-font-size-picker {
 	font-size: 18pt;
     border-radius: 20px;
 	width: max-content;
