--- a/client/src/components/username-modal/UsernameModal.css
+++ b/client/src/components/username-modal/UsernameModal.css
@@ -19,8 +19,7 @@
     align-items: center;
     justify-content: center;
 
-	width: 50%;
-	height: 30%;
+	width: 25vw;
     border-radius: 20px;
 	background: #18141c;
     
